# protolake-gazelle

./: .gitignore  BUILD.bazel  CONTRIBUTING.md  Dockerfile  LICENSE  MODULE.bazel  README.md  go.mod  go.sum  protolake.code-workspace  test_protolake_gazelle.sh  validate_ci.sh
.claude/: settings.json
.claude/commands/: capture.md  close.md  closeout.md  comments.md  create.md  fire.md  handoff.md  kickoff.md  next.md  quick.md  rebuild.md  status.md  stop.md  sync.md  tasks.md  wip.md
.claude/skills/: address-pr-comments  claude-code-dev  feature-design  knowledge-update  quick  research  service-docs-update  session-handoff  sync-workspace  task-management
.github/: CODEOWNERS  dependabot.yml  development-branches.json  main-protection.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  integration.yml  release.yml
integration/: integration_test.go
language/: BUILD.bazel  bundle.go  generate.go  protolake.go  protolake_test.go
test_helpers/: fix_proto_imports.py  gazelle_wrapper.py
testdata/basic_lake/: lake.yaml
testdata/basic_lake/com/testcompany/common/: bundle.yaml
testdata/basic_lake/com/testcompany/common/types/v1/: common.proto
testdata/basic_lake/com/testcompany/user/: bundle.yaml
testdata/basic_lake/com/testcompany/user/api/v1/: user.proto
tools/: BUILD.bazel  proto_bundle.bzl
